--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -49,9 +49,64 @@
       </button>
     </div>
   </div>
+  <hr>
   <div class="row">
     <div class="col-xs-12 col-md-6 col-md-offset-3">
-      <p>No posts available!</p>
+      <form [formGroup]="updateForm" (ngSubmit)="onUpdatePosts(updateForm.value)">
+        <div class="form-group">
+          <label for="id">Id</label>
+          <input type="text"
+            class="form-control"
+            id="id"
+            required
+            formControlName="id"
+            name="id">
+        </div>
+        <div formGroupName="userInput">
+          <div class="form-group">
+            <label for="title">Title</label>
+            <input
+              type="text"
+              class="form-control"
+              id="title"
+              required
+              formControlName="title"
+              name="title"
+            />
+          </div>
+          <div class="form-group">
+            <label for="content">Content</label>
+            <textarea
+              class="form-control"
+              id="content"
+              required
+              formControlName="content"
+              name="content"
+            ></textarea>
+          </div>
+        </div>
+        <button
+          class="btn btn-primary"
+          type="submit"
+          [disabled]="!updateForm.valid"
+        >
+          Update Post
+        </button>
+      </form>
+    </div>
+  </div>
+  <hr>
+  <div class="row">
+    <div class="spinner-border" style="width: 6rem; height: 6rem;" role="status" *ngIf="showLoading"></div>
+    <span class="sr-only" *ngIf="showLoading">Loading ...</span>
+    <div class="col-xs-12 col-md-6 col-md-offset-3">
+      <p *ngIf="loadedPosts.length<1 && !showLoading">No posts available!</p>
+      <ul class="list-group" *ngIf="loadedPosts.length>=1 && !showLoading">
+        <li class="list-group-item" *ngFor="let post of loadedPosts" (click)="fillForm(post)">
+          <h3>{{ post.title }}</h3>
+          <p>{{ post.content }}</p>
+        </li>
+      </ul>
     </div>
   </div>
 </div>
